# gobang-lite

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  gobang-lite.cpp  termview.h  view.cpp  view.h
src/gobang/: board.cpp  board.h  gobang.cpp  gobang.h  player.cpp  player.h
src/player/: ai_v1.cpp  ai_v1.h  client.cpp  client.h  tramp.cpp  tramp.h  wod.cpp  wod.h
src/ui/: aeropane.cpp  aeropane.h  button.cpp  button.h  imageview.cpp  imageview.h  label.cpp  label.h  pane.cpp  pane.h  prototype.cpp  prototype.h  widget.cpp  widget.h
